# av-fantastico

./: 2_EDA (1).ipynb  3_EDA.ipynb  README.md  pyproject.toml
controller/inputs/: pred_xyz.pt
controller/pure-pursuit/: controller.py
crips-dm/: Avance1_Equipo33.ipynb
dataset/: builder.py
extras/: topics_list.txt
inference/: inference.ipynb
model-checkpoint/: __init__.py
notebooks/: 1_EDA.ipynb  1_clip_analysis.ipynb  2_inputs_transformation.ipynb
raw-data/image/: .gitignore  images.py
raw-data/orientation/: orientation.py
raw-data/pose/: pose.py
training/: __init__.py  parameter_trainable.py  training.py
