[project]
name = "av"
version = "0.1.0"
description = "Procesamiento de datos"
readme = "README.md"
authors = [{ name = "Juan Manuel" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pyproj>=3.5.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.10.0",
    "matplotlib>=3.10.8",
    "rosbags==0.9.23",
    "mcap==1.3.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",   
    "jupyter>=1.1.1",       
]

